[project]
name = "pretix-adyen"
dynamic = ["version"]
description = "This plugin allows to use Adyen as a payment provider"
readme = "README.rst"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["pretix"]
authors = [
    {name = "pretix team", email = "support@pretix.eu"},
]
maintainers = [
    {name = "pretix team", email = "support@pretix.eu"},
]

dependencies = [
    "Adyen==6.0.*",
]

[project.entry-points."pretix.plugin"]
pretix_adyen = "pretix_adyen:PretixPluginMeta"

[project.entry-points."distutils.commands"]
build = "pretix_plugin_build.build:CustomBuild"

[build-system]
requires = [
    "setuptools",
    "pretix-plugin-build",
]

[project.urls]
homepage = "https://code.rami.io/pretix/pretix-adyen"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "pretix_adyen.__version__"}

[tool.setuptools.packages.find]
include = ["pretix*"]
namespaces = false